[package]
name = "mobex-backend"
description = "Backend for Mobex Game"
version = "1.3.1"
edition = "2021"
authors = ["Ismael Belisario <ismaelbeli.com@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ismaelxyz/mobex"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
schemars = "0.8"
okapi = "0.7.0"
dotenv = "0.15.0"
futures = "0.3"

[dependencies.rocket]
version = "0.5.0-rc.4"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_okapi]
version = "0.8.0"
features = ["swagger", "secrets"]

[dependencies.mongodb]
version = "3.0.1"
#features = ["bson-chrono-0_4"]

[dependencies.bson]
version = "2.10.0"
features = ["chrono-0_4"]

[dependencies.chrono]
version = "0.4"
features = ["serde"] 
